--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Identificador de Havaianas (Versão Corrigida)</title>
+    <title>Identificador de Havaianas (Versão Final)</title>
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
@@ -21,14 +21,14 @@
         </div>
     </main>
     
-    <!-- Bibliotecas Externas -->
+    <!-- CARREGANDO A FUNDAÇÃO PRIMEIRO -->
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachable-machine-image.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.5/dist/JsBarcode.all.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-firestore-compat.js"></script>
     
-    <!-- NOSSO SCRIPT VEM POR ÚLTIMO -->
+    <!-- NOSSO SCRIPT VEM POR ÚLTIMO, QUANDO TUDO JÁ ESTIVER PRONTO -->
     <script src="script.js"></script>
 </body>
 </html>
