--- a/index.html
+++ b/index.html
@@ -1,26 +1,75 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Identificador de Havaianas (TF.js Puro)</title>
+    <title>Identificador de Havaianas</title>
     <link rel="stylesheet" href="style.css">
+
+    <!-- PASSO 1: O SCRIPT PRINCIPAL DO ADSENSE VAI AQUI, E APENAS AQUI. -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1177100123416384"
+         crossorigin="anonymous"></script>
 </head>
 <body>
+
+    <!-- ANÚNCIO DO TOPO (NÃO FIXO) -->
+    <div id="anuncio-cabecalho">
+        <!-- COLOQUE AQUI APENAS O CÓDIGO DO BLOCO "cabecalho-fixo-responsivo" -->
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-1177100123416384"
+             data-ad-slot="3416962170"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+        <script>
+             (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
+
     <header>
         <h1>Identificador de Havaianas</h1>
         <p>Tire uma foto da sandália para ver os códigos de barras</p>
     </header>
+
     <main>
         <label for="upload-camera" class="botao">Tirar Foto</label>
         <input type="file" accept="image/*" capture="camera" id="upload-camera" style="display: none;">
+        
         <img id="imagem-preview" style="display:none; max-width: 100%; margin-top: 1rem;" />
         
         <div id="resultado-area">
             <h2 id="modelo-identificado">Aguardando início...</h2>
-            <div id="codigos-container"></div>
+            <div id="tamanho-container"></div>
+            <div id="codigo-container"></div>
         </div>
     </main>
+
+    <footer>
+        <div id="anuncio-rodape">
+        <!-- CÓDIGO DO BLOCO "rodape-principal" -->
+         <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-1177100123416384"
+             data-ad-slot="5253444564"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+        <script>
+             (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
+
+  <!-- Substitua o <nav> do seu rodapé em todos os arquivos -->
+<nav class="footer-nav">
+    <a href="index.html">Início</a> |
+    <a href="sobre.html">Sobre</a> |
+    <a href="como-usar.html">Como Usar</a> |
+    <a href="blog-dicas-estoque.html">Dicas</a> |
+    <a href="politica.html">Privacidade</a>
+</nav>
+
+    </footer>
+
+    <!-- Scripts de bibliotecas externas -->
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.5/dist/JsBarcode.all.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app-compat.js"></script>
