--- a/como-usar.html
+++ b/como-usar.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Como Usar - Identificador de Havaianas</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="data:,">
     <style>
         main.content-page { text-align: left; max-width: 800px; }
         main.content-page h2 { margin-top: 1.5rem; color: var(--havaianas-blue); }
