--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Identificador de Havaianas</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="data:,">
 
     <!-- PASSO 1: O SCRIPT PRINCIPAL DO ADSENSE VAI AQUI, E APENAS AQUI. -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1177100123416384"
