--- a/politica.html
+++ b/politica.html
@@ -6,6 +6,7 @@
     <title>Política de Privacidade - Identificador de Havaianas</title>
     <!-- Link para o mesmo arquivo de estilo para manter a consistência -->
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="data:,">
     <style>
         /* Estilos adicionais para a página de política */
         main.policy {
