--- a/blog-dicas-estoque.html
+++ b/blog-dicas-estoque.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3 Dicas para Otimizar seu Estoque - Identificador de Havaianas</title>
+    <link rel="icon" href="data:,">
     <link rel="stylesheet" href="style.css">
     <style>
         main.content-page { text-align: left; max-width: 800px; }
