--- a/sobre.html
+++ b/sobre.html
@@ -7,6 +7,7 @@
     
     <!-- A LINHA MAIS IMPORTANTE: Conecta esta página aos seus estilos -->
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="data:,">
     
     <!-- Estilos específicos para páginas de conteúdo, para garantir consistência -->
     <style>
