--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Identificador de Havaianas</title>
     <link rel="stylesheet" href="style.css">
+    
+    <!-- === AQUI ESTÁ A PARTE DO APP PWA === -->
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#00A3DA">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Havaianas ID">
+    <link rel="apple-touch-icon" href="icon-192.png">
+    <!-- ==================================== -->
+
     <link rel="icon" href="data:,">
 
     <!-- PASSO 1: O SCRIPT PRINCIPAL DO ADSENSE VAI AQUI, E APENAS AQUI. -->
